# GCEL

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
doc/: Transpose.md
include/: CMakeLists.txt
include/common/: profiler.h
include/common/profiler/: profiler.h
include/common/tensor/: CpuTensorImpl.h  GpuTensorImpl.h  MetaTensorImpl.h  TensorImpl.h  basic.h  tensor.h  types.h
include/cpu/: CMakeLists.txt  cpu.h
include/cpu/kernels/: cpu.h  cpu_kernels.h
include/cpu/ops/: cpu_ops.h
include/cpu/profiler/: CpuProfiler.h
include/gpu/: gpu.h
include/gpu/kernels/: gpu.h  gpu_kernels.h
include/gpu/profiler/: GpuProfiler.h
include/meta/: meta_ops.h
include/utils/: CMakeLists.txt  random.h  status.h  tensor.h  test_helper.h
include/utils/cal_helper/: cal_helper.h
include/utils/tensor/: CpuTensorImpl.h  GpuTensorImpl.h  TensorImpl.h  basic.h  tensor.h
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/profiler/: CMakeLists.txt  profiler.cpp
lib/common/tensor/: CMakeLists.txt  CpuTensorImpl.cpp  GpuTensorImpl.cpp  (+4 more)
lib/cpu/: CMakeLists.txt  README.md  add.cpp  dot.cpp  transpose.cpp
lib/gpu/: CMakeLists.txt  add.cpp  add.cu  dot.cu  transpose.cu
lib/meta/: CMakeLists.txt  binary.cpp
lib/utils/: CMakeLists.txt  random.cpp  tensor.cpp  test_helper.cpp
scripts/: build.sh  config.sh
tests/: CMakeLists.txt  add_test.cpp  test_main.cpp  transpose_test.cpp
tests/accuracy/: CMakeLists.txt  add_test.cpp  gemm_test.cpp  transpose_test.cpp
tests/performance/: CMakeLists.txt  perf_util.h  test_main.cpp  transpose_perf.cpp
(+25 files in other folders)
